# rabbitxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/rabbitxx/: cio_set.hpp  cio_stats.hpp  cio_types.hpp  experiment.hpp  graph.hpp  location_queue.hpp  log.hpp  mapping.hpp  stats.hpp  utils.hpp
include/rabbitxx/graph/: base_graph.hpp  bgl_base_graph.hpp  builder.hpp  io_graph.hpp  io_graph_simple.hpp  otf2_io_graph_properties.hpp  otf2_trace_event.hpp  simple_graph.hpp
include/rabbitxx/graph/builder/: builder.hpp  otf2_io_graph_builder.hpp
include/rabbitxx/trace/: base.hpp  graph_builder.hpp  otf2_trace_event.hpp  simple_graph_builder.hpp
include/rabbitxx/utils/: enum_to_string.hpp
include/utils/: enum_to_string.hpp
modules/: CMakeLists.txt  README.md
modules/cio_stats/: CMakeLists.txt  main.cpp
modules/cio_timing/: CMakeLists.txt  main.cpp
modules/concurrent_io_sets/: CMakeLists.txt  main.cpp
modules/creates-in-dir/: CMakeLists.txt  main.cpp
modules/global_vs_local/: CMakeLists.txt  main.cpp
modules/io_timespan/: CMakeLists.txt  io_timespan.py  io_timespan_mcolor.py  main.cpp
modules/num_vertices/: CMakeLists.txt  main.cpp
modules/open_per_file/: CMakeLists.txt  main.cpp
modules/ops_per_file/: CMakeLists.txt  main.cpp  plot_operations_per_file.py
modules/print_graph/: CMakeLists.txt  main.cpp  trc2png.sh
modules/region_stats/: CMakeLists.txt  main.cpp  region_hist.py
modules/request_sizes/: CMakeLists.txt  main.cpp  req-size-plt.py
modules/set2csv/: CMakeLists.txt  main.cpp
modules/significant_op_typ/: CMakeLists.txt  main.cpp  plot_significant_kind.py  plot_significant_radar.py
scripts/: dot2tikz.py  plt-reqsz.py  results2dataframe.py  run_analysis.py  timing.py  try_offset.py  vis_cio_set_algo.py
scripts/analysis/: Filter.py  Plotting.py  accessTracking.py  experiment.py  metadata.py  overlap.py  summary.py  utils.py  writemarker.py
scripts/notebooks/: Untitled.ipynb
src/: CMakeLists.txt  cio_set.cpp  cio_stats.cpp  experiment.cpp  io_graph.cpp  main.cpp  otf2_io_graph_builder.cpp  stats.cpp
test/: CMakeLists.txt  test_seek.c  test_seek_cur.c
test/bfs_test/: CMakeLists.txt  main.cpp
test/cio_set_test/: CMakeLists.txt  main.cpp
test/concurrent_io_sets_test/: CMakeLists.txt  main.cpp
test/count_io_events/: CMakeLists.txt  main.cpp
test/dfs_test/: CMakeLists.txt  main.cpp
test/dot_output_test/: CMakeLists.txt  main.cpp
test/dump_events/: CMakeLists.txt  main.cpp
test/dump_sets_per_process/: CMakeLists.txt  main.cpp
test/graph_builder_test/: CMakeLists.txt  main.cpp
test/graph_properties_test/: CMakeLists.txt  main.cpp
test/independent_process_group_test/: CMakeLists.txt  main.cpp
test/mapping_test/: CMakeLists.txt  main.cpp
test/out_degree_test/: CMakeLists.txt  main.cpp
test/process_group_test/: CMakeLists.txt  main.cpp
test/read_test/: CMakeLists.txt  main.cpp  reader.hpp
test/root_synchronization_test/: CMakeLists.txt  main.cpp
test/seek_construction_test/: CMakeLists.txt  main.cpp
test/sets_per_process_test/: CMakeLists.txt  main.cpp
test/sets_to_dot_test/: CMakeLists.txt  main.cpp
test/simple_graph_test/: CMakeLists.txt  main.cpp
test/stats_test/: CMakeLists.txt  main.cpp
test/sync_root_test/: CMakeLists.txt  main.cpp
test/test_data/: 1.xml  2.cc  3.cc  4.cc  5.cc  README.md
test/trace_read/: CMakeLists.txt  main.cpp
