
add_subdirectory(dfs_test)
add_subdirectory(bfs_test)
add_subdirectory(mapping_test)
add_subdirectory(dot_output_test)
add_subdirectory(dump_events)
add_subdirectory(count_io_events)
add_subdirectory(out_degree_test)
add_subdirectory(simple_graph_test)
add_subdirectory(graph_builder_test)
add_subdirectory(cio_set_test)
add_subdirectory(sync_root_test)
