
add_subdirectory(dfs_test)
add_subdirectory(bfs_test)
add_subdirectory(mapping_test)
add_subdirectory(dot_output_test)
add_subdirectory(dump_events)
add_subdirectory(out_degree_test)
add_subdirectory(simple_graph_test)
add_subdirectory(cio_set_test)
add_subdirectory(sets_to_dot_test)
add_subdirectory(dump_sets_per_process)
# catch
add_subdirectory(sets_per_process_test)
add_subdirectory(root_synchronization_test)
add_subdirectory(concurrent_io_sets_test)
add_subdirectory(process_group_test)
add_subdirectory(independent_process_group_test)
